--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
               <img
                 class="w-full rounded-3xl object-cover object-center shadow-[0px_4px_20px_7px_#0000000f]"
                 src="img/image1.webp"
-                width="27.5rem"
-                height="27.5rem"
+                width="440"
+                height="440"
                 alt="Main image"
               />
               <div class="flex items-center justify-between">
@@ -193,8 +193,8 @@
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
                   src="img/image2-min.webp"
-                  width="18.625rem"
-                  height="18.625rem"
+                  width="298"
+                  height="298"
                   loading="lazy"
                   alt="Favorite works image 1"
                 />
@@ -249,8 +249,8 @@
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
                   src="img/image3-min.webp"
-                  width="18.625rem"
-                  height="18.625rem"
+                  width="298"
+                  height="298"
                   loading="lazy"
                   alt="Favorite works image 2"
                 />
@@ -307,8 +307,8 @@
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
                   src="img/image4-min.webp"
-                  width="18.625rem"
-                  height="18.625rem"
+                  width="298"
+                  height="298"
                   loading="lazy"
                   alt="Favorite works image 3"
                 />
@@ -363,8 +363,8 @@
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
                   src="img/image5-min.webp"
-                  width="18.625rem"
-                  height="18.625rem"
+                  width="298"
+                  height="298"
                   loading="lazy"
                   alt="Favorite works image 4"
                 />
@@ -606,8 +606,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image6-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 5"
                   />
@@ -662,8 +662,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image7-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 6"
                   />
@@ -720,8 +720,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image8-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 7"
                   />
@@ -776,8 +776,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image9-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 8"
                   />
@@ -832,8 +832,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image10-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 9"
                   />
@@ -888,8 +888,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image11-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 10"
                   />
@@ -944,8 +944,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image12-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 11"
                   />
@@ -1002,8 +1002,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image13-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 12"
                   />
@@ -1069,8 +1069,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image6-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 5"
                   />
@@ -1125,8 +1125,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image7-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 6"
                   />
@@ -1183,8 +1183,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image8-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 7"
                   />
@@ -1239,8 +1239,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image9-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 8"
                   />
@@ -1306,8 +1306,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image10-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 9"
                   />
@@ -1362,8 +1362,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image11-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 10"
                   />
@@ -1418,8 +1418,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image12-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 11"
                   />
@@ -1476,8 +1476,8 @@
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
                     src="img/image13-min.webp"
-                    width="18.625rem"
-                    height="18.625rem"
+                    width="298"
+                    height="298"
                     loading="lazy"
                     alt="Favorite works image 12"
                   />
@@ -1524,19 +1524,17 @@
             class="md:lg-text mt-8 block cursor-pointer text-xl"
           >
             <input type="checkbox" class="peer hidden" />
-            <p class="arrow relative pl-11 dark:text-white">
+            <span class="arrow relative pl-11 dark:text-white">
               This is our first time at a photo shoot. Can you tell me how to
               pose, where to look?
-            </p>
+            </span>
             <span
               class="md-text md:lg-text hidden pt-3 peer-checked:block md:pt-8"
             >
-              <p>
-                Yes, of course, I always help with posing and suggest how best
-                to stand and where to look. I also always have a casual
-                conversation during the shoot so that you don’t feel constrained
-                - because this will be reflected in the photographs.
-              </p>
+              Yes, of course, I always help with posing and suggest how best to
+              stand and where to look. I also always have a casual conversation
+              during the shoot so that you don’t feel constrained - because this
+              will be reflected in the photographs.
             </span>
           </label>
 
@@ -1546,17 +1544,15 @@
             class="md:lg-text mt-8 block cursor-pointer text-xl md:mt-11"
           >
             <input type="checkbox" class="peer hidden" />
-            <p class="arrow relative pl-11 dark:text-white">
+            <span class="arrow relative pl-11 dark:text-white">
               How long in advance do I need to sign up for a shoot?
-            </p>
+            </span>
             <span
               class="md-text md:lg-text hidden pt-3 peer-checked:block md:pt-8"
             >
-              <p>
-                The earlier you sign up, the more likely it is that the time you
-                need will be available. Sometimes people sign up even for today,
-                but the optimal period is two weeks in advance.
-              </p>
+              The earlier you sign up, the more likely it is that the time you
+              need will be available. Sometimes people sign up even for today,
+              but the optimal period is two weeks in advance.
             </span>
           </label>
 
@@ -1566,24 +1562,15 @@
             class="md:lg-text md:mt-11- mt-8 block cursor-pointer text-xl"
           >
             <input type="checkbox" class="peer hidden" />
-            <p class="arrow relative pl-11 dark:text-white">
+            <span class="arrow relative pl-11 dark:text-white">
               Do you print photos?
-            </p>
+            </span>
             <span
               class="md-text md:lg-text hidden pt-3 peer-checked:block md:pt-8"
             >
-              <p>
-                Yes, but photo printing is not included in the cost of photo
-                sessions and is paid separately:
-              </p>
-              <ul class="ml-5 list-disc md:ml-6">
-                <li>10x15 centimeters (glossy paper)</li>
-                <li>A4 (21x29.7 centimeters, glossy paper)</li>
-              </ul>
-              <p>
-                Photo printing services are provided only in conjunction with
-                photography services!
-              </p>
+              Yes, but photo printing is not included in the cost of photo
+              sessions and is paid separately. Photo printing services are
+              provided only in conjunction with photography services!
             </span>
           </label>
         </div>
