--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link href="css/output.css" rel="stylesheet" />
     <title>TailwindCss Example</title>
     <meta name="description" content="TailwindCss Example Description" />
+    <meta name="robots" content="noindex,follow" />
     <link rel="preload" as="image" href="img/image1.webp" />
   </head>
   <body>
@@ -1524,7 +1525,7 @@
             class="md:lg-text mt-8 block cursor-pointer text-xl"
           >
             <input type="checkbox" class="peer hidden" />
-            <span class="arrow relative pl-11 dark:text-white">
+            <span class="arrow relative block pl-11 dark:text-white">
               This is our first time at a photo shoot. Can you tell me how to
               pose, where to look?
             </span>
@@ -1544,7 +1545,7 @@
             class="md:lg-text mt-8 block cursor-pointer text-xl md:mt-11"
           >
             <input type="checkbox" class="peer hidden" />
-            <span class="arrow relative pl-11 dark:text-white">
+            <span class="arrow relative block pl-11 dark:text-white">
               How long in advance do I need to sign up for a shoot?
             </span>
             <span
@@ -1562,7 +1563,7 @@
             class="md:lg-text md:mt-11- mt-8 block cursor-pointer text-xl"
           >
             <input type="checkbox" class="peer hidden" />
-            <span class="arrow relative pl-11 dark:text-white">
+            <span class="arrow relative block pl-11 dark:text-white">
               Do you print photos?
             </span>
             <span
